--- a/assets/pages/tobey-maguire/spiderman1.html
+++ b/assets/pages/tobey-maguire/spiderman1.html
@@ -5,12 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/css/internal.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 
   <title>Multiverso | Spider-Man</title>
 </head>
 
 <body>
   <div class="s-wrapper">
+
+    <video loop autoplay muted>
+      <source src="/assets/videos/spiderman-2002-trailer.mp4" type="video/mp4">
+    </video>
+
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
@@ -19,14 +25,14 @@
           </a>
         </div>
         <ul>
-          <li><a href="#01">01</a></li>
-          <li><a href="#02">02</a></li>
-          <li><a href="#03">03</a></li>
+          <li><a href="./spiderman1.html">01</a></li>
+          <li><a href="./spiderman2.html">02</a></li>
+          <li><a href="./spiderman3.html">03</a></li>
         </ul>
       </nav>
     </div>
 
-    <div class="s-main-content">
+    <div class="s-main-content s-spiderman-01-01">
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="/assets/images/spiderman-tobey/movie-01/logo.png" alt="Sppiderman (2002)" title="Sppiderman (2002)">
@@ -74,17 +80,17 @@
         <div class="gallery">
           <ul>
             <li>
-              <a data-fancybox href="#">
+              <a data-fancybox href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
                 <img src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
               </a>
             </li>
             <li>
-              <a data-fancybox href="#">
+              <a data-fancybox href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg">
                 <img src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt="">
               </a>
             </li>
             <li>
-              <a data-fancybox href="#">
+              <a data-fancybox href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
                 <img src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
               </a>
             </li>
@@ -95,6 +101,8 @@
   </div>
   </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 
 </html>
