--- a/assets/pages/tobey-maguire/spiderman2.html
+++ b/assets/pages/tobey-maguire/spiderman2.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multiverso | Spiderman</title>
-  <link href="../../assets/css/internal.css" rel="stylesheet" />
+  <link href="/assets/css/internal.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 </head>
 <body>
   <div class="s-wrapper">
     
     <video loop autoplay muted>
-      <source src="../../assets/videos/spiderman2-2004-trailer.mp4" type="video/mp4" />
+      <source src="/assets/videos/spiderman2-2004-trailer.mp4" type="video/mp4" />
     </video>
 
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
-          <a href="../../index.html">
-            <img src="../../assets/images/icons/spiderman1.png" />
+          <a href="/index.html">
+            <img src="/assets/images/icons/spiderman1.png" />
           </a>
         </div>
         <ul>
@@ -30,10 +30,10 @@
       </nav>
     </div>
 
-    <div class="s-main-content">
+    <div class="s-main-content s-spiderman-01-02">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tobey/movie-02/logo.png" alt="Spiderman (2002)"
+          <img src="/assets/images/spiderman-tobey/movie-02/logo.png" alt="Spiderman (2002)"
             title="Spiderman (2002)" />
         </div>
 
@@ -46,19 +46,17 @@
           </div>
 
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;Depois de ser picado por uma aranha geneticamente modificada em uma
-              demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los
-              para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém,
-              ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes
-              para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico
-              Duende Verde.</p>
+            <p><strong>Sinopse:</strong>&nbsp;O Dr. Otto Octavius é transformado em Doutor Octopus
+              quando uma falha em uma experiência de fusão nuclear resulta em uma explosão que mata sua esposa. Ele culpa o Homem-Aranha pelo acidente e deseja vingança.
+              Enquanto isso, o alter ego do herói, Peter Parker, perde seus poderes. Para complicar as coisas,
+              o seu melhor amigo odeia o Homem-Aranha e sua amada fica noiva.</p>
           </div>
         </div>
 
         <div class="s-links">
           <ul>
             <li>
-              <a href="https://www.youtube.com/watch?v=TYMMOjBUPMM" class="link-button" target="_blank">
+              <a href="https://www.youtube.com/watch?v=1s9Yln0YwCw" class="link-button" target="_blank">
                 <span class="icon">
                   <div class="play-icon">&nbsp;</div>
                 </span>
@@ -76,18 +74,18 @@
         <div class="gallery">
           <ul>
             <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
+              <a data-fancybox href="/assets/images/spiderman-tobey/movie-02/gallery/image-01.png">
+                <img src="/assets/images/spiderman-tobey/movie-02/gallery/image-01.png" alt="">
               </a>
             </li>
             <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt="">
+              <a data-fancybox href="/assets/images/spiderman-tobey/movie-02/gallery/image-02.png">
+                <img src="/assets/images/spiderman-tobey/movie-02/gallery/image-02.png" alt="">
               </a>
             </li>
             <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
+              <a data-fancybox href="/assets/images/spiderman-tobey/movie-02/gallery/image-03.png">
+                <img src="/assets/images/spiderman-tobey/movie-02/gallery/image-03.png" alt="">
               </a>
             </li>
           </ul>
