pages Tom Holland

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <nav class="s-menu">
     <ul>
       <li class="s-menu__item">
-        <a href="index.html">Página Inicial</a>
+        <a href="#">Página Inicial</a>
       </li>
       <li class="s-menu__item">
         <a href="./assets/pages/tobey-maguire/spiderman1.html">Tobey Maguire</a>
@@ -22,10 +22,10 @@
         <img src="./assets/images/icons/spider.svg" alt="Spider-Man Multiverse">
       </li>
       <li class="s-menu__item">
-        <a href="#">Tom Holland</a>
+        <a href="./assets/pages/tom-holland/spiderman1.html">Tom Holland</a>
       </li>
       <li class="s-menu__item">
-        <a href="#">Andrew Garfield</a>
+        <a href="./assets/pages/andrew-garfield/spiderman1.html">Andrew Garfield</a>
       </li>
     </ul>
   </nav>
