--- a/assets/pages/tobey-maguire/spiderman1.html
+++ b/assets/pages/tobey-maguire/spiderman1.html
@@ -25,7 +25,7 @@
           </a>
         </div>
         <ul>
-          <li><a href="./spiderman1.html">01</a></li>
+          <li><a href="#">01</a></li>
           <li><a href="./spiderman2.html">02</a></li>
           <li><a href="./spiderman3.html">03</a></li>
         </ul>
