--- a/assets/pages/tom-holland/spiderman2.html
+++ b/assets/pages/tom-holland/spiderman2.html
@@ -6,20 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider Man | Multiverso</title>
-  <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 </head>
 
 <body>
   <div class="s-wrapper">
     <video autoplay loop>
-      <source src="../../assets/videos/spiderman2-2019-trailer.mp4" type="video/mp4" />
+      <source src="/assets/videos/spiderman2-2019-trailer.mp4" type="video/mp4" />
     </video>
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
-          <a href="../../index.html">
-            <img src="../../assets/images/icons/spiderman1-tom.png" />
+          <a href="/index.html">
+            <img src="/assets/images/icons/spiderman1-tom.png" />
           </a>
         </div>
         <ul>
@@ -34,7 +35,7 @@
     <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tom/movie-02/logo.png" alt="Spiderman 2 (2005)"
+          <img src="/assets/images/spiderman-tom/movie-02/logo.png" alt="Spiderman 2 (2005)"
             title="Spiderman 2 (2005)" />
         </div>
 
@@ -69,14 +70,32 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
+            <li>
+              <a data-fancybox href="/assets/images/spiderman-tom/movie-02/gallery/movie-2tom.jpg">
+                <img src="/assets/images/spiderman-tom/movie-02/gallery/movie-2tom.jpg" class="img-fancy" alt="">
+              </a>
+            </li>
+            <li>
+              <a data-fancybox href="/assets/images/spiderman-tom/movie-02/gallery/tom-misterio-qj.jpg">
+                <img src="/assets/images/spiderman-tom/movie-02/gallery/tom-misterio-qj.jpg" class="img-fancy" alt="">
+              </a>
+            </li>
+            <li>
+              <a data-fancybox href="/assets/images/spiderman-tom/movie-02/gallery/tom-misterio.jpg">
+                <img src="/assets/images/spiderman-tom/movie-02/gallery/tom-misterio.jpg" class="img-fancy" alt="">
+              </a>
+            </li>
+            <li>
+              <a data-fancybox href="/assets/images/spiderman-tom/movie-02/gallery/tom-teia.jpg">
+                <img src="/assets/images/spiderman-tom/movie-02/gallery/tom-teia.jpg" class="img-fancy" alt="">
+              </a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 </html>
