--- a/assets/pages/andrew-garfield/spiderman2.html
+++ b/assets/pages/andrew-garfield/spiderman2.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider Man | Multiverso</title>
-  <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 </head>
 
 <body>
   <div class="s-wrapper">
 
     <video autoplay loop>
-      <source src="../../assets/videos/amazing-spiderman2-2014-trailer.mp4" type="video/mp4" />
+      <source src="/assets/videos/amazing-spiderman2-2014-trailer.mp4" type="video/mp4" />
     </video>
 
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
-          <a href="../../index.html">
-            <img src="../../assets/images/icons/spiderman1-andrew.png" />
+          <a href="/index.html">
+            <img src="/assets/images/icons/spiderman1-andrew.png" />
           </a>
         </div>
         <ul>
@@ -35,7 +36,7 @@
     <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-andrew/movie-02/logo.png" alt="Spiderman 2 (2005)"
+          <img src="/assets/images/spiderman-andrew/movie-02/logo.png" alt="Spiderman 2 (2005)"
             title="Spiderman 2 (2005)" />
         </div>
 
@@ -70,13 +71,27 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png" alt=""></a></li>
+            <li>
+              <a data-fancybox href="/assets/images/spiderman-andrew/movie-02/gallery/image-01.png">
+                <img src="/assets/images/spiderman-andrew/movie-02/gallery/image-01.png" alt="">
+              </a>
+            </li>
+            <li>
+              <a data-fancybox href="/assets/images/spiderman-andrew/movie-02/gallery/image-02.png">
+                <img src="/assets/images/spiderman-andrew/movie-02/gallery/image-02.png" alt="">
+              </a>
+            </li>
+            <li>
+              <a data-fancybox href="/assets/images/spiderman-andrew/movie-02/gallery/image-03.png">
+                <img src="/assets/images/spiderman-andrew/movie-02/gallery/image-03.png" alt="">
+              </a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 </html>
