--- a/assets/pages/tobey-maguire/spiderman1.html
+++ b/assets/pages/tobey-maguire/spiderman1.html
@@ -76,12 +76,12 @@
         </div>
       </div>
 
-      <div class="s-main-content__botton">
+      <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
             <li>
               <a data-fancybox href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
-                <img src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
+                <img  src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
               </a>
             </li>
             <li>
@@ -91,7 +91,7 @@
             </li>
             <li>
               <a data-fancybox href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
-                <img src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
+                <img  src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
               </a>
             </li>
           </ul>
